# patchon

./: .gitignore  LICENSE  README.md  README_zh.md  patchon.yaml.example  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
docs/: mkdocs.yml
docs/api/: cli.md  core.md
docs/docs/: index.md
docs/docs/about/: changelog.md  license.md
docs/docs/api/: cli.md  core.md
docs/docs/development/: architecture.md  building.md  contributing.md
docs/docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/docs/user-guide/: advanced.md  basic-usage.md  troubleshooting.md
examples/: patchon.yaml.example
rust/: Cargo.toml  pyproject.toml  rustfmt.toml
rust/src/: lib.rs
src/patchon/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  core.py  discover.py  lock.py  models.py
src/patchon/_native/: __init__.py  _pure.py  _rust.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_discover.py  test_models.py
