[package]
name = "patchon-rust"
version = "0.1.0"
edition = "2021"
authors = ["patchon contributors"]
description = "High-performance core for patchon - Python hot patching tool"
license = "MIT"
rust-version = "1.75"

[lib]
name = "patchon_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
nix = { version = "0.26", features = ["process", "signal", "fs"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
rayon = "1.10"
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
